--- a/backend/config/fictionhub_nginx.conf
+++ b/backend/config/fictionhub_nginx.conf
@@ -3,18 +3,18 @@ map $http_upgrade $connection_upgrade {
   '' close;
 }
 
-# server {
-#        # redirect from http to https                              
-#         listen 80;
-#         listen [::]:80;
-#         server_name fictionhub.io www.fictionhub.io;
-#         return 301 https://$server_name$request_uri;
-# }
+server {
+       # redirect from http to https                              
+        listen 80;
+        listen [::]:80;
+        server_name fictionhub.io www.fictionhub.io;
+        return 301 https://$server_name$request_uri;
+}
 
 
 server {
     listen 80;
-    server_name fictionhub.io edge.fictionhub.io localhost;
+    server_name fictionhub.io localhost;
 
     # For SSL verification
     # location ~ /.well-known {
