--- a/backend/config/fictionhub_nginx.conf
+++ b/backend/config/fictionhub_nginx.conf
@@ -73,7 +73,7 @@ server {
     proxy_set_header Connection $connection_upgrade;
     tcp_nodelay on;
 
-    location /blog/ {    		
+    location / {    		
         # Enable caching.
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|otf|ttf|eot|woff|svg)$ {
               expires 10d;
