--- a/backend/config/fictionhub_nginx.conf
+++ b/backend/config/fictionhub_nginx.conf
@@ -97,5 +97,5 @@ server {
        proxy_pass http://0.0.0.0:8400;           		  
     }
     # root /home/ray/mastodon/live/public;
-
+    error_page 500 501 502 503 504 403 404 405 /home/ray/fictionhub/backend/templates/errors/5xx.html;
 }		
