--- a/backend/config/backend_nginx.conf
+++ b/backend/config/backend_nginx.conf
@@ -31,4 +31,5 @@ server {
         uwsgi_pass  django;
         include /home/fictionhub/backend/config/uwsgi_params; # the uwsgi_params file you installed
     }
+    error_page 500 501 502 503 504 403 404 405 /home/fictionhub/backend/templates/errors/5xx.html;	
 }	
