--- a/backend/config/fictionhub_nginx.conf
+++ b/backend/config/fictionhub_nginx.conf
@@ -76,6 +76,11 @@ server {
     error_page 500 501 502 503 504 403 404 405 /home/ray/fictionhub/backend/templates/errors/5xx.html;
     		
 
+    # Prompts fetched and served from nulis
+    location /prompts {
+       proxy_pass http://0.0.0.0:3090;           		  
+    }
+
     location / {
         # Enable caching.
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|otf|ttf|eot|woff|svg)$ {
@@ -99,5 +104,7 @@ server {
     	     
        proxy_pass http://0.0.0.0:8400;           		  
     }
+
+
     # root /home/ray/mastodon/live/public;
 }		
