--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     # Local postgres doesnt work, using docker's one for nowzies
-    ports:
-      - '5432:8000'
+    # ports:
+    #   - '5432:8000'
 
   backend:
     build: ./backend
